<resources>
    <string name="app_name">Book Store App</string>
    <string name="add_books">Add books</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="product">Product</string>
    <string name="hint_book_name">Name</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone_number">Supplier Phone Number</string>
    <string name="supplier_data">Supplier Data</string>
    <string name="sell_button">Sale</string>
    <string name="empty_view_title">You need to add data to these fields:</string>
    <string name="empty_view_information">Name \nPrice \nQuantity \nSupplier Name \nSupplier Phone Number </string>
    <string name="delete_all_books">Delete all books</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="order_button">order</string>
    <string name="editor_activity_title_new_book">New Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="editor_update_book_successful">Updated book</string>
    <string name="quit_editing_without_saving">Quit editing without saving?</string>
    <string name="quit">Quit</string>
    <string name="continue_editing">Continue</string>
    <string name="delete_this_book">Delete this book?</string>
    <string name="really_delete_all_books">Delete all books?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_failed">Error with deleting</string>
    <string name="editor_delete_book_successful">Deleted book</string>
    <string name="currency"> $</string>
    <string name="requires_name">Book requires a name</string>
    <string name="all_fields_required">All fields are required!</string>
    <string name="dummy_name">Android Studio</string>
    <string name="dummy_price">14</string>
    <string name="dummy_quantity">5</string>
    <string name="dummy_supplier_name">Google</string>
    <string name="dummy_supplier_phone_number">0656155541</string>
</resources>
